# image-sage-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/image_sage_mcp/: config.py  fetcher.py  formatter.py  models.py  processor.py  server.py  validation.py
src/image_sage_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
